# a08.0-conversor-temperatura

./: LICENSE  README.md  conversor-temperatura.cabal
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
app/: Main.hs
src/: Temperatura.hs
test/: MainSpec.hs  Run.hs
