cabal-version:      3.0
name:               conversor-temperatura
version:            1.0.0
synopsis:           Conversor de temperatura com validação
description:        Atividade introdutória sobre programação interativa em Haskell.
license:            MIT
license-file:       LICENSE
author:             Professor
maintainer:         professor@example.com
category:           Education
build-type:         Simple
extra-source-files: README.md
                    LICENSE

library conversor-temperatura-lib
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  Temperatura
    build-depends:    base
    ghc-options:      -Wall

executable conversor-temperatura
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base
                    , conversor-temperatura-lib
    ghc-options:      -Wall

test-suite tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    other-modules:    Run
    build-depends:    base
                    , conversor-temperatura-lib
                    , hspec
                    , QuickCheck
                    , process
                    , temporary
    ghc-options:      -Wall
